--- a/Kmarket/src/main/resources/templates/admin/index.html
+++ b/Kmarket/src/main/resources/templates/admin/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <div id="admin-wrapper">
-        <th:block th:include="@{/admin/_header.html}"></th:block>
+        <th:block th:include="@{admin/_header.html}"></th:block>
         <main>
-            <th:block th:include="@{/admin/_aside.html}"></th:block>
+            <th:block th:include="@{admin/_aside.html}"></th:block>
             <section id="admin-index">
                 <nav>
                     <h3>관리자 메인</h3>
@@ -259,7 +259,7 @@
                 </div>
             </section>
         </main>
-        <th:block th:include="@{/admin/_footer.html}"></th:block>
+        <th:block th:include="@{admin/_footer.html}"></th:block>
     </div>    
 </body>
 </html>
