--- a/Kmarket/src/main/resources/templates/member/login.html
+++ b/Kmarket/src/main/resources/templates/member/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="member-wrapper">
-        <th:block th:include="@{/member/_header.html}"></th:block>
+        <th:block th:include="@{member/_header.html}"></th:block>
         <main>
             <div id="member-login">
                 <img th:src="@{/img/member_txt_login.gif}" alt="로그인" />
@@ -34,7 +34,7 @@
 				<img th:src="@{/img/member_certifi_logo.gif}" alt="banner">
             </div>
         </main>        
-        <th:block th:include="@{/_footer.html}"></th:block>
+        <th:block th:include="@{_footer.html}"></th:block>
     </div>    
 </body>
 </html>
