--- a/Kmarket/src/main/resources/templates/member/register.html
+++ b/Kmarket/src/main/resources/templates/member/register.html
@@ -34,7 +34,7 @@
 			type이 post일땐 $.post()를 사용한다
 			-> /member/checkUid?uid=abcd 의 형식으로 전달이 될것이다.*/
 			
-			$.get('/member/checkUid', jsonData, function(data){
+			$.get('/Kmarket/member/checkUid', jsonData, function(data){
 					
 		 			if(data.result == 1){
 						$('.msgId').css('color', 'red').text('이미 사용중인 아이디 입니다.');
@@ -95,7 +95,7 @@
 		    	var email = $(this).val();
 		    	var jsonData = {'email':email}; // js 객체 생성 (json은 JS문법이므로)
 		    	
-		    	$.get('/member/checkEmail',jsonData, function(data){
+		    	$.get('/Kmarket/member/checkEmail',jsonData, function(data){
 		    		if(email==''){
 		    			$('.msgEmail').css('color','red').text('유효하지 않은 이메일입니다. 이메일을 다시 입력해주세요.');
 		    		}else if(data.result == 1) {
@@ -111,7 +111,7 @@
 		    	var hp = $(this).val();
 		    	var jsonData = {'hp':hp}; // js 객체 생성 (json은 JS문법이므로)
 		    	
-		    	$.get('/member/checkHp',jsonData, function(data){
+		    	$.get('/Kmarket/member/checkHp',jsonData, function(data){
 		    		if(hp==''){
 		    			$('.msgHp').css('color','red').text('유효하지 않은 전화번호입니다. 번호를 다시 입력해주세요.');
 		    		}else if(data.result == 1) {
@@ -127,7 +127,7 @@
 </head>
 <body>
     <div id="member-wrapper">
-        <th:block th:include="@{/member/_header.html}"></th:block>
+        <th:block th:include="@{member/_header.html}"></th:block>
         <main>
             <div id="member-register">
                 <h1>회원가입</h1>
@@ -205,7 +205,7 @@
 				</form>
             </div>
         </main>        
-        <th:block th:include="@{/_footer.html}"></th:block>
+        <th:block th:include="@{_footer.html}"></th:block>
     </div>    
 </body>
 </html>
