--- a/Kmarket/src/main/resources/templates/admin/product/list.html
+++ b/Kmarket/src/main/resources/templates/admin/product/list.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="admin-wrapper">
-         <th:block th:include="@{/admin/_header.html}"></th:block>
+         <th:block th:include="@{admin/_header.html}"></th:block>
         <main>
             <aside>
                 <!-- Global Navigation Bar -->
@@ -186,7 +186,7 @@
                 <!-- 상품목록 컨텐츠 끝 -->
             </section>
         </main>
-        <th:block th:include="@{/admin/_footer.html}"></th:block>
+        <th:block th:include="@{admin/_footer.html}"></th:block>
     </div>    
 </body>
 </html>
