2021/11/16 aws 배포 2차 수정

--- a/Kmarket/src/main/resources/templates/member/register-seller.html
+++ b/Kmarket/src/main/resources/templates/member/register-seller.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="member-wrapper">
-        <th:block th:include="@{/member/_header.html}"></th:block>
+        <th:block th:include="@{member/_header.html}"></th:block>
         <main>
             <div id="member-register-seller">
                 <h1>회원가입</h1>
@@ -133,7 +133,7 @@
 				</form>
             </div>
         </main>        
-        <th:block th:include="@{/_footer.html}"></th:block>
+        <th:block th:include="@{_footer.html}"></th:block>
     </div>    
 </body>
 </html>
