--- a/Kmarket/src/main/resources/templates/product/order-complete.html
+++ b/Kmarket/src/main/resources/templates/product/order-complete.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <th:block th:include="@{/_header.html}"></th:block>
+        <th:block th:include="@{_header.html}"></th:block>
         <main>
             <!-- 카테고리/베스트 상품 영역 -->
             <aside>
@@ -171,7 +171,7 @@
               </section>
             </section>
         </main>
-        <th:block th:include="@{/_footer.html}"></th:block>
+        <th:block th:include="@{_footer.html}"></th:block>
         <button type="button" id="top">상단이동</button>
     </div>    
 </body>
