2021/11/16 aws img 링크 수정

--- a/Kmarket/src/main/resources/static/css/style.css
+++ b/Kmarket/src/main/resources/static/css/style.css
@@ -1014,7 +1014,7 @@ h5.rating.star5 {background-position: 0 -200px;}
 	position: absolute;
  	width: 21px;
     height: 21px;
-    background-image: url('/img/kmarket_buttons.png');
+    background-image: url('/Kmarket/img/kmarket_buttons.png');
    	font-size: 0;
     background-color: transparent;
     border: none;
