--- a/Kmarket/src/main/resources/static/css/style.css
+++ b/Kmarket/src/main/resources/static/css/style.css
@@ -327,7 +327,7 @@ main > aside > .best > ol > li > a .dis_price > span {
     vertical-align: text-bottom;
     width: 55px;
     height: 13px;
-    background: url('../img/ico_freeshipping.gif') no-repeat;
+    background: url('/Kmarket/img/ico_freeshipping.gif') no-repeat;
 }
 
 /* 메인 첫번째 섹션 */
@@ -412,7 +412,7 @@ main > section > section > article .dis_price > span {
     vertical-align: text-bottom;
     width: 55px;
     height: 13px;
-    background: url('../img/ico_freeshipping.gif') no-repeat;
+    background: url('/Kmarket/img/ico_freeshipping.gif') no-repeat;
 }
 
 /* 슬라이더 영역 */
@@ -500,7 +500,7 @@ footer p > strong {
     /* display: none; */
     width: 42px;
     height: 42px;
-    background-image: url('../img/top.png');
+    background-image: url('/Kmarket/img/top.png');
     border: none;
     font-size: 0;
     cursor: pointer;
@@ -529,7 +529,7 @@ main > section > nav > h1 {
 
 h6.rating {
     font-size: 11px;
-    background-image: url('../img/rating_star.png');
+    background-image: url('/Kmarket/img/rating_star.png');
     background-repeat: no-repeat;
     background-position: 36px 0px;
     background-size: auto 100%;
@@ -544,7 +544,7 @@ h5.rating {
     width: 150px;
     height: 20px;
     font-size: 0px;
-    background-image: url(../img/ico_rating_star.png);
+    background-image: url(/Kmarket/img/ico_rating_star.png);
     background-repeat: no-repeat;
     background-position: 36px 0px;
     text-indent: 86px;
@@ -562,10 +562,10 @@ h5.rating.star5 {background-position: 0 -200px;}
     background-repeat: no-repeat;
 }
 
-.badge.power {background-image: url('../img/ico_power_dealer.gif');}
-.badge.great {background-image: url('../img/ico_great_seller.gif');}
+.badge.power {background-image: url('/Kmarket/img/ico_power_dealer.gif');}
+.badge.great {background-image: url('/Kmarket/img/ico_great_seller.gif');}
 .badge.power.great {
-    background: url('../img/ico_power_dealer.gif') no-repeat, url('../img/ico_great_seller.gif') no-repeat 63px;
+    background: url('/Kmarket/img/ico_power_dealer.gif') no-repeat, url('/Kmarket/img/ico_great_seller.gif') no-repeat 63px;
     width: 160px;
 }
 
@@ -665,7 +665,7 @@ h5.rating.star5 {background-position: 0 -200px;}
     vertical-align: text-bottom;
     width: 55px;
     height: 13px;
-    background: url('../img/ico_freeshipping.gif') no-repeat;
+    background: url('/Kmarket/img/ico_freeshipping.gif') no-repeat;
     margin-top: 4px;
 }
 
@@ -822,7 +822,7 @@ h5.rating.star5 {background-position: 0 -200px;}
     width: 30px;
     height: 18px;
     top: 4px;
-    background-image: url('../img/sp_icon.png');
+    background-image: url('/Kmarket/img/sp_icon.png');
     font-size: 0;
     vertical-align: text-top;
     margin-right: 2px;
@@ -866,7 +866,7 @@ h5.rating.star5 {background-position: 0 -200px;}
     width: 16px;
     height: 9px;
     margin-top: 10px;
-    background-image: url('../img/sp_icon.png');
+    background-image: url('/Kmarket/img/sp_icon.png');
     background-position: -196px 0;
     font-size: 0;
 }
@@ -960,7 +960,7 @@ h5.rating.star5 {background-position: 0 -200px;}
     border: none;
     font-size: 0;
     background-color: transparent;
-    background-image: url('../img/sp_icon.png');
+    background-image: url('/Kmarket/img/sp_icon.png');
     cursor: pointer;
 }
 #view .info > .summary .items .title > button {
@@ -1952,7 +1952,7 @@ h5.rating.star5 {background-position: 0 -200px;}
   vertical-align: text-bottom;
   width: 55px;
   height: 13px;
-  background: url('../img/ico_freeshipping.gif') no-repeat;
+  background: url('/Kmarket/img/ico_freeshipping.gif') no-repeat;
   margin-top: 4px;
 }
 
