--- a/TheJoenMovie/src/main/resources/templates/index.html
+++ b/TheJoenMovie/src/main/resources/templates/index.html
@@ -118,10 +118,10 @@
                                 <img th:src="@{/img/강릉.png}" alt="rank1"/>
                             </div>
                             <h2 style="color:white;font-size:30px;">[[${movies.title}]]</h2>
-                            <p style="color:white;font-size:25px;">장르</p>
-                            <p style="color:white;font-size:25px;">감독</p>
-                            <p style="color:white;font-size:25px;">배우</p>
-                            <h1 class="rating star5" style="color:white;font-size:20px;">관람평</h1>
+                            <p style="color:white;font-size:25px;">[[${movies.genre}]]</p>
+                            <p style="color:white;font-size:25px;">[[${movies.director}]]</p>
+                            <p style="color:white;font-size:25px;">[[${movies.actor}]]</p>
+                            <h1 class="rating star5" style="color:white;font-size:20px;">평점 [[${movies.score}]]</h1>
                         </a>
                     </article>
                 </section>
